--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -35,5 +35,8 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
