--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     rootDir: backend
     buildCommand: npm install && npx prisma generate && npm run build
-    startCommand: npx prisma db push && npm start
+    startCommand: npx prisma db push && ls -R dist && npm start
     envVars:
       - key: NODE_VERSION
         value: 20
@@ -22,7 +22,7 @@ services:
     plan: free
     rootDir: bot
     buildCommand: npm install && npm run build
-    startCommand: npm start
+    startCommand: ls -R dist && npm start
     envVars:
       - key: NODE_VERSION
         value: 20
