--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.4.2",
+    "@prisma/client": "6.2.1",
     "cors": "^2.8.6",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.3.1",
@@ -25,7 +25,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.2",
-    "prisma": "^7.4.2",
+    "prisma": "6.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
