--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "6.2.1",
+    "axios": "^1.13.6",
     "cors": "^2.8.6",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.19",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.6",
